--- a/index.html
+++ b/index.html
@@ -332,11 +332,11 @@
         <div class="contact-cards">
           <div class="card">
             <form action="https://formspree.io/f/xzzvqnpo" method="POST">
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="email" id="email" placeholder="Your Email" required>
-                <textarea id="project" placeholder="Tell me about your project..." required></textarea>
-                <button class="btn btn-primary" type="submit">Send Message</button>
-            </form>
+  <input type="text" id="name" name="name" placeholder="Your Name" required>
+  <input type="email" id="email" name="email" placeholder="Your Email" required>
+  <textarea id="project" name="project" placeholder="Tell me about your project..." required></textarea>
+  <button class="btn btn-primary" type="submit">Send Message</button>
+</form>
           </div>
           <div class="card">
             <h3>Quick details</h3>
@@ -398,3 +398,4 @@
   </script>
 </body>
 </html>
+
